# hermes-desktop

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.web.json  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: attachment_staging.rs  claw3d.rs  config.rs  context_files.rs  cronjobs.rs  curator.rs  hermes.rs  hermes_cli.rs  installer.rs  kanban.rs  lib.rs  locale.rs  main.rs  mcp.rs  memory.rs  model_discovery.rs  models.rs  plugins.rs  profiles.rs  providers.rs  sandbox.rs  security.rs  session_cache.rs  sessions.rs  skills.rs  skills_hub.rs  soul.rs  sse_parser.rs  ssh.rs  tool_paths.rs  tools.rs  usage.rs  yaml_path.rs
src/main/: config.ts
src/renderer/src/: App.tsx  constants.ts  env.d.ts  main.tsx
src/renderer/src/assets/: main.css
src/renderer/src/assets/icons/: index.tsx
src/renderer/src/components/: AgentMarkdown.tsx  AttachmentChip.tsx  I18nProvider.test.tsx  I18nProvider.tsx  RemoteNotice.tsx  TabPage.tsx  ThemeProvider.tsx  Versions.tsx
src/renderer/src/hooks/: useDiscoveredModels.ts
src/renderer/src/screens/Agents/: Agents.tsx
src/renderer/src/screens/Chat/: Chat.tsx  ChatEmptyState.tsx  ChatHeader.tsx  ChatInput.tsx  MessageRow.tsx  attachmentUtils.test.ts  attachmentUtils.ts  slashCommands.ts
src/renderer/src/screens/ContextFiles/: ContextFiles.tsx
src/renderer/src/screens/Curator/: Curator.tsx
src/shared/: hermes-api.ts
src/shared/i18n/: index.ts
(+232 files in other folders)
