[package]
name = "hermes-desktop"
version = "0.6.0"
description = "Hermes Agent Desktop — self-improving AI assistant"
authors = ["fathah"]
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
# tauri-plugin-updater — removed; we use custom update commands
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
futures-util = "0.3"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
regex-lite = "0.1"
once_cell = "1"
dirs-next = "2"
libc = "0.2"
